# UI_demoqa

./: .gitignore  README.md  pyproject.toml  requirements.txt
demoqa/models/: close_ad.py
demoqa/models/controls/: datepicker.py
demoqa/models/pages/: page_practice_form.py
tests/: conftest.py  test_practice_form.py
