[tool.poetry]
name = "ui tests demoqa"
version = "0.1.0"
description = "Autotests for website Demoqa, page practice form."
authors = ["Pavel Surov <surovp08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
selene = "2.0.0b16"
allure-pytest = "^2.10.0"
selenium = "4.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
